k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-test-app
  labels:
    app: python-test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-test-app
  template:
    metadata:
      labels:
        app: python-test-app
    spec:
      containers:
      - name: python-test-app
        image: renard17/python-test-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
