k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-test-app-svc
spec:
  selector:
    app: python-test-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
